--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
     <h5>Filc Napló</h5>
     <ul>
       <li><b>Samsung</b> telefonokra Galaxy Storeból: <a
-        href="https://apps.samsung.com/appquery/appDetail.as?appId=hu.filcnaplo.ellenorzo">Letöltés</a></li>
-      <li><b>Huawei</b> telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821">Letöltés</a></li>
-      <li><b>Apple</b> eszközökre AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178">Letöltés</a></li>
+        href="https://apps.samsung.com/appquery/appDetail.as?appId=hu.filcnaplo.ellenorzo" target="_blank">Letöltés</a></li>
+      <li><b>Huawei</b> telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821" target="_blank">Letöltés</a></li>
+      <li><b>Apple</b> eszközökre AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178" target="_blank">Letöltés</a></li>
       <li><b>Apk fájl</b> minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • <a href="#apkhelp">Segítség</a></li>
       <li>
         <details>
           <summary><b>F-Droid</b> letöltés automatikus frissítéshez <i>Haladó</i></summary>
           <ul>
             <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a href="#apkhelp">Segítség apk fájl telepítésében</a></li>
-            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a href="https://filcnaplo.hu/fdroid/repo/">Kattints ide</a> a hozzáadáshoz, okézd le az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
-            <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
+            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a href="https://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
+            <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo" target="_blank">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
           </ul>
           </p>
         </details>
@@ -87,7 +87,7 @@
     <h5>Arisztokréta</h5>
     <ul>
       <li>iOS-re AppStoreból: <a
-          href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">Letöltés</a></li>
+          href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784" target="_blank">Letöltés</a></li>
       <li>Apk fájl minden telefonra: <a href="https://github.com/Coware-Apps/ellenorzo/releases">Letöltés</a></li>
     </ul>
     <a name="apkhelp">
