fdroid link test

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <summary><b>F-Droid</b> letöltés automatikus frissítéshez <i>Haladó</i></summary>
           <ul>
             <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a href="#apkhelp">Segítség apk fájl telepítésében</a></li>
-            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a href="https://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
+            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban)test1:<br><a href="fdroid://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
             <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo" target="_blank">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
           </ul>
           </p>
