how did that happen

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </li>
       <li>
         <p><b>2021. 01. 03.</b><br>
-          A Filc csapata elindítja a Filc Napló közzétételi folyamatát Samsung Galaxy Storera és Huawei Playre.
+          A Filc csapata elindítja a Filc Napló közzétételi folyamatát Samsung Galaxy Storera és Huawei AppGalleryre.
         </p>
       </li>
       <li>
