--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <li><b>Apk fájl</b> minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • <a href="#apkhelp">Segítség</a></li>
       <li>
         <details>
-          <summary><b>F-Droid</b> letöltés automatikus frissítéshez <i>Haladó</i></summary>
+          <summary><b>F-Droid</b> letöltés automatikus frissítéshez <b>Ajánlott!</b></summary>
           <ul>
             <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a href="#apkhelp">Segítség apk fájl telepítésében</a></li>
             <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a href="fdroidrepos://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
@@ -89,26 +89,9 @@
     </ul>
     <a name="apkhelp">
     <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5></a>
-    <p>Az Android rendszerű telefonokon az alkalmazások telepítése .apk fájlokkal lehetséges. Ezeket normál esetben a
-      Google Play áruházon keresztül kapja a telefon, de manuális telepítésre is van lehetőség.<br>
-      Fontos azonban meggyőződnöd az alkalmazás biztonságáról, mielőtt manuálisan feltelepíted! Az Arisztokréta és Filc
-      Napló manuális telepítése biztonságos, ha a hivatalos oldalainkról töltötted le a fájlt.</p>
+    <p>Ebben a videóban az F-Droid telepítésével együtt megmutatjuk:</p>
     <p>
-    <p><b>Lépések:</b></p>
-    <ul>
-      <li>Ha fel volt telepítve a Filc Napló vagy az Arisztokréta korábban a Playen keresztül a telefonodra,
-        mindenekelőtt töröld le.</li>
-      <li>Indítsd el az .apk fájl letöltését egy megbízható oldalon található linken keresztül.</li>
-      <li>Mielőtt elindul a letöltés, a Google Chrome figyelmeztet, hogy .apk fájlt töltesz le. Okézd le az ablakot.
-      </li>
-      <li>A letöltés elkészültét az értesítéseid között fogod látni. Ha elkészült, kattints az értesítésre a
-        megnyitáshoz.</li>
-      <li>A megjelenő telepítőképernyőn figyelmeztetést fogsz látni, hogy nem engedélyezett a Chromeból származó külső
-        alkalmazások telepítése. A megjelenő gombbal lépj a beállítások oldalra, és kapcsold be a Google Chromeot, mint
-        engedélyezett külső forrást.</li>
-      <li>Próbáld újra a telepítést, ezúttal, ha minden jól megy, sikerülni fog. Az így telepített appok sokszor nem
-        kerülnek ki automatikusan a főoldaladra, az alkalmazáslistában fogod megtalálni az ikont.</li>
-    </ul>
+      <iframe width="315" height="560" src="https://www.youtube.com/embed/TpIhlEQw9_o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <a name="mitortent">
       <h3>Mi történt?</h3>
