oops i did it again

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
           <summary><b>Válaszunk a Krétának</b></summary>
           <div class="card mt-2">
             <div class="card-body">
-              <p>Dear eKRÉTA Informatikai Zrt. and Mécsei Dániel!</p>
+              <p>Dear eKRÉTA Informatikai Zrt. and [privát]!</p>
               <p>
                 We believe that we are not required to have your permission for our app to use your API. Users should be
                 able to access their data with whatever they’d like in a state-wide system.</p>
