update as of 2021 03 19

--- a/index.html
+++ b/index.html
@@ -61,49 +61,39 @@
     </p>
     <h5>Filc Napló</h5>
     <ul>
+      <li><b>Apple</b> eszközökre AppStore TestFlighton keresztül: <a href="https://testflight.apple.com/join/Ak6I1C4C"
+          target="_blank">Csatlakozás</a></li>
       <li><b>Samsung</b> telefonokra Galaxy Storeból: <a
           href="https://apps.samsung.com/appquery/appDetail.as?appId=hu.filcnaplo.ellenorzo"
           target="_blank">Letöltés</a></li>
-      <li><b>Huawei</b> telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821"
-          target="_blank">Letöltés</a></li>
-      <li><b>Apple</b> eszközökre AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178"
-          target="_blank">Letöltés</a></li>
       <li><b>Apk fájl</b> minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • <a
           href="#apkhelp">Segítség</a></li>
+      <hr>
       <li>
-        <details>
-          <summary><b>F-Droid</b> letöltés automatikus frissítéshez <b>Ajánlott!</b></summary>
-          <ul>
-            <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a
-                href="#apkhelp">Segítség apk fájl telepítésében</a></li>
-            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a
-                href="fdroidrepos://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le
-              az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
-            <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo"
-                target="_blank">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
-          </ul>
-          </p>
-        </details>
+        <b>F-Droid</b> letöltés automatikus frissítéshez <b>Ajánlott!</b>
+        <ul>
+          <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a
+              href="#apkhelp">Segítség apk fájl telepítésében</a></li>
+          <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a
+              href="fdroidrepos://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le
+            az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
+          <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo"
+              target="_blank">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
+        </ul>
       </li>
+      <hr>
+      <a name="apkhelp"></a>
+      <center>
+        <h6>Segítség az F-Droid telepítéshez</h6>
+        <iframe width="169" height="300" src="https://www.youtube.com/embed/TpIhlEQw9_o" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </center>
     </ul>
-    <p>Az F-Droid egy külső alkalmazásáruház, tele nyílt forráskódú, közösségi
-      fejlesztésű alkalmazásokkal. Ha nincs Huawei vagy Samsung telefonod, feltelepítheted az F-Droidot, és azon
-      keresztül automatikusan frissül majd az appod.</p>
     <h5>Arisztokréta</h5>
     <ul>
-      <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784"
-          target="_blank">Letöltés</a></li>
       <li>Apk fájl minden telefonra: <a href="https://github.com/Coware-Apps/ellenorzo/releases">Letöltés</a></li>
     </ul>
-    <a name="apkhelp">
-      <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5>
-    </a>
-    <p>Ebben a videóban az F-Droid telepítésével együtt megmutatjuk:</p>
-    <p>
-      <iframe width="315" height="560" src="https://www.youtube.com/embed/TpIhlEQw9_o" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-    </p>
     <a name="mitortent">
       <h3>Mi történt?</h3>
     </a>
@@ -210,7 +200,7 @@
         <p><b>2020. 12. 22</b><br>
           A Filc csapata Levelet küld a Googlenak, hogy a büntetést enyhítsék, vagy vonják vissza.
         <details>
-          <summary><b>A levelünk tartalma</b></summary>
+          <summary><b>Levelünk a Googlenek</b></summary>
           <div class="card mt-2">
             <div class="card-body">
               <p>
@@ -399,11 +389,9 @@
             óra</a>
         </p>
       </li>
-      <a name="friss"></a>
-      <!--!MOVEME-->
       <li>
         <p>
-          <b>2021. 02. 08.</b> <i>ÚJ</i><br>
+          <b>2021. 02. 08.</b><br>
           A Kréta az újságcikkek megjelenését követően újra válaszol a levelünkre.<br>
           A levél lényege: A Kréta nem adott
           engedélyt külsős fejlesztőknek az API használatára, és elfogadhatatlannak tartja hogy ilyen kliensek elérhetők
@@ -434,7 +422,7 @@
       </li>
       <li>
         <p>
-          <b>2021. 03. 03.</b><i> ÚJ</i><br>
+          <b>2021. 03. 03.</b><br>
           A Kréta ismét válaszol a levelünkre.<br>
           A levél lényege: A véleményük nem változott, nem fogják megnyitni az API-t külső alkalmazások előtt. Csak
           nekik van joguk a Diákok és Szülők érzékeny adatait kezelni. Újra kérik az Applet, hogy vegye le a Filcet az
@@ -444,8 +432,9 @@
       </li>
       <li>
         <p>
-          <b>2021. 03. 05.</b><i> ÚJ</i><br>
-          A Huawei is kérelmet kap a Krétától az AppGalleryről való eltávolításra. Megírják, hogy a Kréta szerint a Filc nem
+          <b>2021. 03. 05.</b><br>
+          A Huawei is kérelmet kap a Krétától az AppGalleryről való eltávolításra. Megírják, hogy a Kréta szerint a Filc
+          nem
           legális külsős kliens a Krétához.
         <p>
         <details>
@@ -470,11 +459,60 @@
         </p>
         </p>
       </li>
+      <a name="friss"></a>
+      <!--!MOVEME-->
+      <li>
+        <p>
+          <b>2021. 03. 14.</b> <i>ÚJ</i><br>
+          Megírjuk az AppStoreal kapcsolatos emailekből (reméljük) az utolsót a Krétának és az Applenek:
+        <p>
+        <details>
+          <summary><b>Levelünk a Krétának és az Applenek</b></summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              <p>Dear Apple Support,</p>
+              <p>This is our final agreement: The Filc Developer Team has decided to take down the app from the App
+                Store. We hope
+                that with that, this case can be considered resolved.</p>
+              <p><br>Dear eKRÉTA Informatikai Zrt. and [privát]!</p>
+              <p>We are sorry that you are not willing to open up your systems before third-party developers - be it
+                officially or by
+                just ignoring them - and that you are still trying to take down our iOS app from the App Store.<br>You
+                will be
+                relieved to hear that the Filc Developer Team has decided not to continue this debate any further.<br>To
+                avoid
+                damages to our account, we will remove Filc Napló from the App Store ourselves, effective this weekend.
+              </p>
+              <p>Reméljük egy nap majd, talán egy vezetőváltás után, nem lesznek erre a döntésre kényszerítve. [privát],
+                sajnos csak
+                sejteni tudjuk, hogy erről nem dönthet szabadon.</p>
+              <p>Mindenesetre, minden jót kívánunk Önnek.</p>
+              Üdvözlettel,<br>A Filc Napló csapata
+            </div>
+          </div>
+        </details>
+        </p>
+        <p>
+        <details>
+          <summary><b>Az Apple Support válasza</b></summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              Dear [privát],<br>[...]<br>We can confirm that the following app was removed from all territories by the
+              developer
+              (cc'ed).<br>[...]<br>We trust this resolves your concerns and consider this matter closed at this time. If
+              at any time
+              you wish to reopen the matter regarding this app, please send us an email with your reference number
+              (APP138865) in the
+              subject line.<br>Sincerely,<br>Serena
+            </div>
+          </div>
+        </details>
+        </p>
+        </p>
       </li>
-      <li><b>Folyamatban: </b><i>Frissítve 2021. 03. 07.</i><br>
+      <li><b>Folyamatban: </b><i>Frissítve 2021. 03. 19.</i><br>
         <ul>
-          <li>Levelezés a Filc fejlesztők, a Kréta és az Apple között az AppStoreos eltávolításról</li>
-          <li>Levelezés a Filc fejlesztők és a Huawei között az AppGallerys eltávolításról</li>
+          <li>Várakozás egy szebb napra...</li>
         </ul>
       </li>
     </ul>
@@ -706,7 +744,7 @@
         Reméljük, hamarosan.
         <hr>
       </details>-->
-    <i>(Frissítés: A Kréta nem válaszolt a levelünkre.)</i>
+    <i>Frissítés: A Kréta nem válaszolt a levelünkre.</i>
     </p>
     <h5>2. A Google döntésének vitatása <b><i>Kész</i></b></h5>
     <details>
@@ -748,25 +786,9 @@
           eltávolítás legyen, ne felfüggesztés.</li>
       </ul>
     </details>
-    <i>(Frissítés: A Google elutasította a kérelmünket. Részletek fentebb.)</i>
+    <i>Frissítés: A Google elutasította a kérelmünket. Részletek fentebb.</i>
     </p>
-    <h5>3. Az app ismételt közzététele</h5>
-    <p>Sajnos a Kréta a Filc AppStoreos letiltásával bizonyította, hogy az akció nem egyszeri dolog volt, hanem
-      (legalábbis egyelőre) minden újabb próbálkozás tiltással fog találkozni. Ennek fényében:</p>
-    <ul>
-      <li>Google Playen nem fogjuk újra közzétenni az appot, mert az a fejlesztői fiók törlésével járhatna.</li>
-      <li>Apple AppStoreban az eddigiek alapján úgy tűnik, fenn fog maradni az app, az Apple jobban védi a fejlesztőit
-        (valamit érjen is az az évi $100, amit ezúton is köszönünk támogatóinknak).</li>
-      <li>Közzétettük a Filcet Samsung Galaxy Storeon és Huawei AppGalleryn. Ezzel a felhasználók
-        nagyrészét újra
-        könnyen elérhetjük, de mivel kisebb áruházak, van rá esély, hogy a Kréta innen nem távolíttatja el őket.</li>
-      <li>Közzétettük a Filcet F-Droidon. Az F-Droid egy külső alkalmazásáruház, ha ezen keresztül telepítitek majd a
-        Filcet, meg tudjuk oldani az automatikus frissítéseket bármilyen androidos telefonon. Segítséget a telepítéshez
-        az oldal tetején találtok.</li>
-      <li>A Filc a 2.1-es frissítéssel egy főoldali hírlevelet is kapott, ahol az új verziókról és egyéb fontos
-        Filces hírekről is tudunk majd benneteket tájékoztatni.</li>
-    </ul>
-    <h5>4. A közösség bevonása</h5>
+    <h5>3. A közösség bevonása</h5>
     <p>
       Kiadtunk egy posztot Redditen az r/hungary-n, ami röviden
       összefoglalja a helyzetet. Bár ezzel némi nyilvánosságot szereztünk, nem hozott átütő eredményt.<br>
@@ -774,6 +796,23 @@
       <b>Ha újságíró vagy, cikked közzététele előtt kérünk, lépj velünk kapcsolatba <a
           href="https://filcnaplo.hu/discord">Discordon</a> vagy emailben.</b>
     </p>
+    <a name="decision"></a>
+    <h5>4. Az app közzététele hivatalos áruházakon kívül</h5>
+    <i>Frissítve: 2021. 03. 19.</i>
+    <p>A Krétával való levelezésből az derült ki, hogy őket igazán az zavarja, ha az
+      alternatív alkalmazások hivatalos app áruházakban elérhetők. Sajnos tesznek is érte, hogy ne legyenek,
+      viszont a Szivacsnál tavaly tapasztalt technikai ellehetetlenítéssel nem próbálkoznak. Így reméljük, a
+      következőkkel stabilizálódhat a helyzet:</p>
+    <ul>
+      <li>Google Playen, Huawei AppGalleryn, Samsung Galaxy Storeon és Apple AppStoreban nem fogjuk újra közzétenni az
+        appot, mert ez a fejlesztői fiókokat veszélybe sorodná.</li>
+      <li>Apple eszközökön az app egy TestFlight "tesztverzióként" érhető el, amihez linkkel lehet csatlakozni.</li>
+      <li>Android eszközökön az app F-Droidon keresztül érhető el. Ez egy külső alkalmazásáruház, ha ezen keresztül
+        telepítitek a
+        Filcet, meg tudjuk oldani az automatikus frissítéseket bármilyen androidos telefonon. Segítséget a telepítéshez
+        az oldal tetején találtok.</li>
+      <li>Az új verziókról és egyéb hírekről az appon belüli hírlevélen és Discordon keresztül értesítünk titeket.</li>
+    </ul>
     <a href="#top">FEL</a>
 
     <a name="mibensegithetek"></a>
