--- a/index.html
+++ b/index.html
@@ -56,39 +56,39 @@
       <h3>Hogyan telepíthetem az appokat?</h3>
     </a>
     <p>
-    <h6>Ha elakadtál, szívesen segít a <a href="https://filcnaplo.hu/discord">Filc Napló</a> vagy az <a
-        href="https://discord.gg/k3e2pqC">Arisztokréta</a> Discordos közössége.</h6>
     </p>
     <h5>Filc Napló</h5>
     <ul>
+      <li><b>Android</b> eszközökre: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • <a
+          href="#apkhelp">Segítség</a> <b><i>Ajánlott!</i></b></li>
       <li><b>Apple</b> eszközökre AppStore TestFlighton keresztül: <a href="https://testflight.apple.com/join/Ak6I1C4C"
           target="_blank">Csatlakozás</a></li>
-      <li><b>Samsung</b> telefonokra Galaxy Storeból: <a
-          href="https://apps.samsung.com/appquery/appDetail.as?appId=hu.filcnaplo.ellenorzo"
-          target="_blank">Letöltés</a></li>
-      <li><b>Apk fájl</b> minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • <a
-          href="#apkhelp">Segítség</a></li>
-      <hr>
       <li>
-        <b>F-Droid</b> letöltés automatikus frissítéshez <b>Ajánlott!</b>
-        <ul>
-          <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a
-              href="#apkhelp">Segítség apk fájl telepítésében</a></li>
-          <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a
-              href="fdroidrepos://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le
-            az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
-          <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo"
-              target="_blank">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
-        </ul>
+        <details open>
+          <summary><b>F-Droid</b> letöltés</summary>
+          <hr />
+          <ul>
+            <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a
+                href="#apkhelp">Segítség apk fájl telepítésében</a></li>
+            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a
+                href="fdroidrepos://filcnaplo.hu/fdroid/repo/" target="_blank">Kattints ide</a> a hozzáadáshoz, okézd le
+              az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
+            <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo"
+                target="_blank">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
+          </ul>
+
+          <a name="apkhelp"></a>
+          <center>
+            <h6>Segítség az F-Droid telepítéshez</h6>
+            <iframe width="169" height="300" src="https://www.youtube.com/embed/TpIhlEQw9_o" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </center>
+          <hr />
+        </details>
+        <h6>Ha elakadtál, szívesen segít a <a href="https://filcnaplo.hu/discord">Filc Napló</a> vagy az <a
+            href="https://discord.gg/k3e2pqC">Arisztokréta</a> Discordos közössége.</h6>
       </li>
-      <hr>
-      <a name="apkhelp"></a>
-      <center>
-        <h6>Segítség az F-Droid telepítéshez</h6>
-        <iframe width="169" height="300" src="https://www.youtube.com/embed/TpIhlEQw9_o" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </center>
     </ul>
     <h5>Arisztokréta</h5>
     <ul>
